<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_run_corridor</name>
  <version>0.0.1</version>
  <description>Raspimouse ROS2 Run Corridor</description>
  <maintainer email="34445043+ryotaronaka@users.noreply.github.com">ubuntu</maintainer>
  <license>BSD</license>

  <exec_depend>raspimouse</exec_depend>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
